# remote_dictionary

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs
common/: Cargo.toml
common/src/: dto.rs  lib.rs  net.rs
common/tests/: integration.rs
server/: Cargo.toml
server/benches/: db_bench.rs
server/src/: db.rs  lib.rs  main.rs
