[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
# tokio = { version = "^1.21", features = ["full"] }
# tokio-serde = { version="0.8.0", features = ["json"] }
# serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
# bytes = "1.0"
# tokio-util = { version = "^0.7", features = ["codec"] }
# futures = "0.3"
anyhow = "1.0.66"
