[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"

tokio = { version = "^1.21", features = ["full"] }
tokio-util = { version = "^0.7", features = ["codec"] }
tokio-serde = { version="0.8.0", features = ["json"] }
futures = "0.3"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
