[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

anyhow = "^1.0.66"

clap = { version = "^4.0.18", features = ["derive"] }

tokio = { version = "^1.21", features = ["full"] }
persy = "^1.3.4"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
