[package]
name = "server"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "common"
# path = "src/lib.rs"

[dependencies]
common = { path = "../common" }

anyhow = "^1.0.66"

clap = { version = "^4.0.18", features = ["derive"] }

tokio = { version = "^1.21", features = ["full"] }
persy = "^1.3.4"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
lazy_static = "^1.4.0"

[[bench]]
name = "db_bench"
harness = false
